<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="TaskNotification.TaskFragment">

    <ScrollView
        android:id="@+id/scrollojt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tasks_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#263238"
                android:fontFamily="serif-monospace"
                android:paddingLeft="10dp"
                android:text="@string/TasksAbdo"
                android:textColor="#616161"
                android:textSize="17sp" />

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/empty_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/NoTasks"
                android:textColor="#fff"
                android:textSize="30dp"/>


            <TextView
                android:id="@+id/tasksdone_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#263238"
                android:fontFamily="serif-monospace"
                android:paddingLeft="10dp"
                android:text="@string/doneView"
                android:textColor="#616161"
                android:textSize="17sp" />

            <ListView
                android:id="@+id/doneListview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>

